--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Aditya Kolla",
+  "author": ["Aditya Kolla", "Rohan"],
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "node-fetch": "^2.2.0"
   }
 }
