--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.18.1",
     "discord.js": "^11.4.2",
     "dotenv": "^6.1.0",
+    "mongoose": "^5.6.11",
     "nedb": "^1.8.0",
     "node-fetch": "^2.2.0"
   }
