--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 #Ignore Node_Modules
 node_modules/
-playerDB.js
-sample.js
-rohantesting.js
+
+# The .env file
 .env
+
+# package-lock.json
+package-lock.json
