--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "homepage": "https://github.com/Aditya-Kolla/Dota2Bot_discord#readme.md",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "discord.js": "^11.4.2",
     "dotenv": "^6.1.0",
+    "mongoose": "^5.6.11",
     "nedb": "^1.8.0",
     "node-fetch": "^2.2.0"
   }
