--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A discord bot for our Dota 2 discord server",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node bot.js"
   },
   "engines": {
@@ -31,5 +31,8 @@
     "mongoose": "^5.6.11",
     "nedb": "^1.8.0",
     "node-fetch": "^2.2.0"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.0"
   }
 }
